# faery

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: build_wheels.yml
examples/: crop_and_slice.py
python/faery/: __init__.py  aedat.pyi  common.py  dat.pyi  decoder.py  encoder.py  event_stream.pyi  evt.pyi  filter.py  frame.py  render.pyi  stream.py
src/: lib.rs  render.rs  utilities.rs  x264.h
src/aedat/: decoder.rs  mod.rs
src/event_stream/: decoder.rs  mod.rs
tests/: assets.py  test_decoders.py  test_encoders.py  test_filters.py  test_timestamps.py
