[project]
name = "faery"
description = "Flexible AER librarY"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "International Centre for Neuromorphic Systems"},
    {name = "Alexandre Marcireau"},
]
version = "0.1.1"
requires-python = ">=3.8"
dependencies = ["numpy>=1.24"]

[project.urls]
homepage = "https://github.com/neuromorphicsystems/faery/"
repository = "https://github.com/neuromorphicsystems/faery/"
documentation = "https://github.com/neuromorphicsystems/faery/"

[build-system]
requires = ["maturin==1.6.0", "numpy"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pyright]
typeCheckingMode = "basic"
executionEnvironments = [{root = ".", venv = ".venv"}]

[tool.isort]
profile = "black"
